--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -101,7 +101,7 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": "#### Coffee Makers Collection"
+      "alt": " Coffee Makers Collection"
       
     }
   }
