responsive mobile and desktop

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -77,7 +77,7 @@
   
   "rich-text#mobile": {
     "props": {
-      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
@@ -85,23 +85,24 @@
   "image#desktop": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
-      "maxWidth": "100%",
+      
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": " Coffee Makers Collection"
-     
+      "alt": "Coffee Makers Collection",
+      "maxWidth": "100%"     
     }
   },
   
   "image#mobile": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
-      "maxWidth": "100%",
+     
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": " Coffee Makers Collection"
+      "alt": " Coffee Makers Collection",
+      "maxWidth": "100%"
       
     }
   }
