--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -2,7 +2,8 @@
   "store.product": {
       "children": [
         "breadcrumb",
-        "flex-layout.row#main"
+        "flex-layout.row#main",
+        "shelf.relatedProducts"
       ]
     },
 
@@ -15,10 +16,10 @@
         "flex-layout.col#right"
       ]
     },
-    
+
     "flex-layout.col#left": {
       "children": [
-        "product-images"
+        "stack-layout#brand"
       ]
     },
 
@@ -50,5 +51,27 @@
         "sku-selector",
         "product-quantity"
       ]
+    },
+
+    "stack-layout#brand": {
+      "children": [
+        "product-images",
+        "product-brand"
+      ]
+    },
+
+    "product-brand":{
+      "props":{
+        "height": 30,
+        "displayMode": "logo"
+      }
+    },
+
+    "sku-selector": {
+      "props": {
+        "showVariationsErrorMessage": true,
+        "initialSelection": "empty"
+      }
     }
+
 }
