--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -59,7 +59,7 @@
 "tab-list.item#home2":{
   "props":{
     "tabId": "electronics",
-    "label": "Electronics"
+    "label": "Instagram"
   }
 },
 
@@ -80,7 +80,7 @@
  },
  "tab-content.item#home2":{
   "children":[
-    "rich-text#home2"
+    "iframe#home2"
   ],
   "props": {
     "tabId": "electronics"
@@ -93,11 +93,14 @@
     "font": "t-heading-3"
   }
 },
-"rich-text#home2": {
+"iframe#home2": {
   "props": {
     "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
     "textPosition": "CENTER",
-    "font": "t-heading-3"
+    "font": "t-heading-3",
+    "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
+    "width": "800px",
+    "height": "1000px"
   }
 }
 
