--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -15,10 +15,18 @@
     "header-layout.desktop": {
       "children": [
         "header-row#notification",
-        "header-row#main"
+        "header-row#main", 
+        "header-row#menu"
       ]
     },
   
+    "header-row#menu": {
+        "children": [
+          "header-spacer",
+          "vtex.menu@2.x:menu#categories",
+          "header-spacer"
+        ]
+      },
     "header-layout.mobile": {
       "children": [
         "header-row#notification",
@@ -51,10 +59,11 @@
 
       "header-row#main-mobile": {
         "children": [
-          "logo",
-          "header-spacer",
-          "minicart",
-          "login"
+            "drawer",
+            "logo",
+            "header-spacer",
+            "minicart",
+            "login"
         ],
       
         "props": {
