--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -9,7 +9,8 @@
       "children": [
           "menu-item#refrigerators",
           "menu-item#ovens",
-          "menu-item#washers"
+          "menu-item#washers",
+          "flex-layout.row#major"
       ],
       "props": {
           "orientation": "vertical"
@@ -27,14 +28,14 @@
       ]
   },
   "flex-layout.col#img":{
-    "children": [
-        "image#menu",
-        "rich-text#header"
-    ],
-    "props":{
-        "paddingRight": 4,
-        "horizontalAlign": "right"
-    }
+        "children": [
+            "image#menu",
+            "rich-text#header"
+        ],
+        "props":{
+            "paddingRight": 4,
+            "horizontalAlign": "right"
+        }
   },
   "image#menu": {
     "props": {
