--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -1,7 +1,6 @@
 {
     "vtex.menu@2.x:submenu#major": {
         "children":[ 
-            "vtex.menu@2.x:menu#major", 
             "flex-layout.row#major"
         ]
     },
@@ -9,8 +8,8 @@
       "children": [
           "menu-item#refrigerators",
           "menu-item#ovens",
-          "menu-item#washers",
-          "flex-layout.row#major"
+          "menu-item#washers"
+          
       ],
       "props": {
           "orientation": "vertical"
